<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/date"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOrder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/DetailsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/bottom_details"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvOrder" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="28dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate">

                <TextView
                    android:id="@+id/costTextView"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    tools:text="10.0c" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textColor="@color/user_name"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/cvImage"
                app:layout_constraintTop_toTopOf="@+id/cvImage"
                tools:text="Мухаммад" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/Address"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toEndOf="@+id/cvImage"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/client_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/Address"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvAddress"
                app:layout_constraintStart_toEndOf="@+id/cvImage"
                app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

            <TextView
                android:id="@+id/tvID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/cvImage"
                app:layout_constraintStart_toEndOf="@+id/cvImage"
                app:layout_constraintTop_toBottomOf="@+id/client_phone_number"
                tools:text="DLS234GT4568K" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvID">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_on_map_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:text="Показать на карте"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_map" />

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="00:00"
                    android:textSize="56dp"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/arrived_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="Прибыл"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_arrived"
                    app:iconGravity="start" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/call_client_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Позвонить клиенту"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_cell_phone"
                    app:iconGravity="start"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/complete_delivery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/app_color"
                    android:text="Завершить"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_done" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>